--- a/ServiceLogics/Simple.Loan.App.ServiceLogics.csproj
+++ b/ServiceLogics/Simple.Loan.App.ServiceLogics.csproj
@@ -9,6 +9,10 @@
   </ItemGroup>
 
   <ItemGroup>
+    <PackageReference Include="Microsoft.Extensions.DependencyInjection.Abstractions" Version="6.0.0" />
+  </ItemGroup>
+
+  <ItemGroup>
     <ProjectReference Include="..\Commons\Simple.Loan.App.Commons.csproj" />
     <ProjectReference Include="..\Contracts\Simple.Loan.App.Contracts.csproj" />
   </ItemGroup>
